[project]
name = "comfyui_naidgenerator"
description = "This extension helps generate images through NAI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["python-dotenv", "argon2-cffi"]

[project.urls]
Repository = "https://github.com/bedovyy/ComfyUI_NAIDGenerator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_NAIDGenerator"
Icon = ""
